--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,70 +1,6 @@
 <app-page-breadcrumb pageTitle="Usuarios" />
 <div>
-    <app-component-card>
-        <div header class="max-w-full w-full">
-            <div class="relative bg-white dark:bg-gray-800 sm:rounded-lg">
-                <div
-                    class="flex flex-col items-center justify-between space-y-3 md:flex-row md:space-y-0 md:space-x-4"
-                >
-                    <div class="w-full md:w-1/2">
-                        <form class="flex items-center">
-                            <label for="simple-search" class="sr-only"
-                                >Buscar</label
-                            >
-                            <div class="relative w-full">
-                                <div
-                                    class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
-                                >
-                                    <svg
-                                        aria-hidden="true"
-                                        class="w-5 h-5 text-gray-500 dark:text-gray-400"
-                                        fill="currentColor"
-                                        viewbox="0 0 20 20"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                    >
-                                        <path
-                                            fill-rule="evenodd"
-                                            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-                                            clip-rule="evenodd"
-                                        />
-                                    </svg>
-                                </div>
-                                <input
-                                    type="text"
-                                    id="simple-search"
-                                    class="block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-brand-500 focus:border-brand-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-brand-500 dark:focus:border-brand-500"
-                                    placeholder="Search"
-                                    required=""
-                                />
-                            </div>
-                        </form>
-                    </div>
-                    <div
-                        class="flex flex-col items-stretch justify-end flex-shrink-0 w-full space-y-2 md:w-auto md:flex-row md:space-y-0 md:items-center md:space-x-3"
-                    >
-                        <button
-                            type="button"
-                            class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white rounded-lg bg-brand-700 hover:bg-brand-800 focus:ring-4 focus:ring-brand-300 dark:bg-brand-600 dark:hover:bg-brand-700 focus:outline-none dark:focus:ring-brand-800"
-                        >
-                            <svg
-                                class="-ml-1 mr-1.5 w-5 h-5"
-                                fill="currentColor"
-                                viewbox="0 0 20 20"
-                                xmlns="http://www.w3.org/2000/svg"
-                                aria-hidden="true"
-                            >
-                                <path
-                                    clip-rule="evenodd"
-                                    fill-rule="evenodd"
-                                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
-                                />
-                            </svg>
-                            Crear usuario
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <app-basic-table-one />
+    <app-component-card title="Gestion de usuarios">
+        <app-users-table />
     </app-component-card>
 </div>
