fix: imgRef para el build del proyecto

--- a/src/app/pages/other-page/not-found/not-found.component.html
+++ b/src/app/pages/other-page/not-found/not-found.component.html
@@ -6,8 +6,8 @@
       ERROR
     </h1>
 
-    <img src="/images/error/404.svg" alt="404" class="dark:hidden" />
-    <img src="/images/error/404-dark.svg" alt="404" class="hidden dark:block" />
+    <img src="images/error/404.svg" alt="404" class="dark:hidden" />
+    <img src="images/error/404-dark.svg" alt="404" class="hidden dark:block" />
 
     <p class="mt-10 mb-6 text-base text-gray-700 dark:text-gray-400 sm:text-lg">
       We can’t seem to find the page you are looking for!
