--- a/src/app/shared/components/cards/card-with-image/card-three/card-three.component.html
+++ b/src/app/shared/components/cards/card-with-image/card-three/card-three.component.html
@@ -1,7 +1,7 @@
 <app-card>
   <div class="mb-5 overflow-hidden rounded-lg">
     <img
-      src="/images/cards/card-03.png"
+      src="images/cards/card-03.png"
       alt="card"
       class="overflow-hidden rounded-lg"
     />
