--- a/src/app/shared/components/cards/card-with-image/card-two/card-two.component.html
+++ b/src/app/shared/components/cards/card-with-image/card-two/card-two.component.html
@@ -1,6 +1,6 @@
 <app-card>
   <div class="mb-5 overflow-hidden rounded-lg">
-    <img src="/images/cards/card-02.png" alt="card" class="overflow-hidden rounded-lg" />
+    <img src="images/cards/card-02.png" alt="card" class="overflow-hidden rounded-lg" />
   </div>
   <div>
     <app-card-description>
