--- a/src/app/shared/components/cards/horizontal-card/card-four/card-four.component.html
+++ b/src/app/shared/components/cards/horizontal-card/card-four/card-four.component.html
@@ -4,7 +4,7 @@
   >
     <div class="overflow-hidden rounded-lg">
       <img
-        src="/images/cards/card-01.png"
+        src="images/cards/card-01.png"
         alt="card"
         class="overflow-hidden rounded-lg"
       />
