--- a/src/app/pages/ui-elements/avatar-element/avatar-element.component.html
+++ b/src/app/pages/ui-elements/avatar-element/avatar-element.component.html
@@ -3,12 +3,12 @@
   <div>
     <app-component-card title="Default Avatar">
       <div class="flex flex-col items-center justify-center gap-5 sm:flex-row">
-        <app-avatar src="/images/user/user-01.jpg" size="xsmall" />
-        <app-avatar src="/images/user/user-01.jpg" size="small" />
-        <app-avatar src="/images/user/user-01.jpg" size="medium" />
-        <app-avatar src="/images/user/user-01.jpg" size="large" />
-        <app-avatar src="/images/user/user-01.jpg" size="xlarge" />
-        <app-avatar src="/images/user/user-01.jpg" size="xxlarge" />
+        <app-avatar src="images/user/user-01.jpg" size="xsmall" />
+        <app-avatar src="images/user/user-01.jpg" size="small" />
+        <app-avatar src="images/user/user-01.jpg" size="medium" />
+        <app-avatar src="images/user/user-01.jpg" size="large" />
+        <app-avatar src="images/user/user-01.jpg" size="xlarge" />
+        <app-avatar src="images/user/user-01.jpg" size="xxlarge" />
       </div>
     </app-component-card>
   </div>
@@ -17,32 +17,32 @@
     <app-component-card title="Avatar with online indicator">
       <div class="flex flex-col items-center justify-center gap-5 sm:flex-row">
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xsmall"
           status="online"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="small"
           status="online"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="medium"
           status="online"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="large"
           status="online"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xlarge"
           status="online"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xxlarge"
           status="online"
         />
@@ -54,32 +54,32 @@
     <app-component-card title="Avatar with Offline indicator">
       <div class="flex flex-col items-center justify-center gap-5 sm:flex-row">
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xsmall"
           status="offline"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="small"
           status="offline"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="medium"
           status="offline"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="large"
           status="offline"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xlarge"
           status="offline"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xxlarge"
           status="offline"
         />
@@ -91,24 +91,24 @@
     <app-component-card title="Avatar with busy indicator">
       <div class="flex flex-col items-center justify-center gap-5 sm:flex-row">
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xsmall"
           status="busy"
         />
-        <app-avatar src="/images/user/user-01.jpg" size="small" status="busy" />
+        <app-avatar src="images/user/user-01.jpg" size="small" status="busy" />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="medium"
           status="busy"
         />
-        <app-avatar src="/images/user/user-01.jpg" size="large" status="busy" />
+        <app-avatar src="images/user/user-01.jpg" size="large" status="busy" />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xlarge"
           status="busy"
         />
         <app-avatar
-          src="/images/user/user-01.jpg"
+          src="images/user/user-01.jpg"
           size="xxlarge"
           status="busy"
         />
