--- a/src/app/shared/components/cards/card-with-image/card-one/card-one.component.html
+++ b/src/app/shared/components/cards/card-with-image/card-one/card-one.component.html
@@ -2,7 +2,7 @@
   <div>
     <div class="mb-5 overflow-hidden rounded-lg">
       <img
-        src="/images/cards/card-01.png"
+        src="images/cards/card-01.png"
         alt="card"
         class="overflow-hidden rounded-lg"
       />
