--- a/src/app/shared/components/header/notification-dropdown/notification-dropdown.component.html
+++ b/src/app/shared/components/header/notification-dropdown/notification-dropdown.component.html
@@ -64,7 +64,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-02.jpg"
+              src="images/user/user-02.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
@@ -98,7 +98,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-03.jpg"
+              src="images/user/user-03.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
@@ -132,7 +132,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-04.jpg"
+              src="images/user/user-04.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
@@ -167,7 +167,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-05.jpg"
+              src="images/user/user-05.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
@@ -201,7 +201,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-02.jpg"
+              src="images/user/user-02.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
@@ -235,7 +235,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-03.jpg"
+              src="images/user/user-03.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
@@ -269,7 +269,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-04.jpg"
+              src="images/user/user-04.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
@@ -303,7 +303,7 @@
             <img
               width="40"
               height="40"
-              src="/images/user/user-05.jpg"
+              src="images/user/user-05.jpg"
               alt="User"
               class="w-full overflow-hidden rounded-full"
             />
