--- a/src/app/shared/components/header/user-dropdown/user-dropdown.component.html
+++ b/src/app/shared/components/header/user-dropdown/user-dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="relative">
   <button (click)="toggleDropdown()" class="flex items-center text-gray-700 dropdown-toggle dark:text-gray-400">
     <span class="mr-3 overflow-hidden rounded-full h-11 w-11">
-      <img src="/images/user/owner.png" alt="User" />
+      <img src="images/user/owner.png" alt="User" />
     </span>
     <span class="block mr-1 font-medium text-theme-sm">Musharof</span>
     <svg [ngClass]="{
