--- a/src/app/shared/layout/auth-page-layout/auth-page-layout.component.html
+++ b/src/app/shared/layout/auth-page-layout/auth-page-layout.component.html
@@ -14,7 +14,7 @@
             <img
               width="231"
               height="48"
-              src="/images/logo/auth-logo.svg"
+              src="images/logo/auth-logo.svg"
               alt="Logo"
             />
           </a>
